<resources>
    <string name="app_name">Lab Game</string>
    <string name="money">Money:</string>
    <string name="default_money">100</string>
    <string name="labelBet">Bet:</string>
    <string name="default_money_bet">10</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="game_rules">Rule: bet at least 10$</string>
    <string name="label_race">Race game</string>
    <string name="bet">Bet</string>
    <string name="game_over">Game Over!</string>
</resources>