<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lnMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLabelMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/money"
            android:textColor="#170D0D"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:paddingStart="5dp"
            android:text="@string/default_money"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnMoney">

        <TextView
            android:id="@+id/tvLabelBet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/labelBet"
            android:textColor="#170D0D"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tvMoneyBet"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:paddingStart="5dp"
            android:text="@string/default_money_bet"
            android:textSize="20sp"
            tools:ignore="LabelFor,RtlSymmetry"
            android:autofillHints="money"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnRace"
        android:layout_width="343dp"
        android:layout_height="250dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnBet"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/checkbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbRacer1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                tools:ignore="NestedWeights" />

            <CheckBox
                android:id="@+id/cbRacer2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <CheckBox
                android:id="@+id/cbRacer3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/sbRacer1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                tools:ignore="NestedWeights" />

            <SeekBar
                android:id="@+id/sbRacer2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <SeekBar
                android:id="@+id/sbRacer3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnRace"
        android:onClick="onClick"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/lnRace"
        android:onClick="onClick"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>